src/components/ModernVideoPlayer.css
@media ( max-width: 575px) {
    .App .video-react .video-react-button {
        width: 3em;
    }

    .App .video-react .video-react-time-control {
        padding-left: 0;
        padding-right: 0;
    }

    .App .btn {
        padding: 0.2rem 0.2rem;
    }
}

video {
    outline: none;
}

.video-react {
    font-family: Arial, Helvetica, sans-serif !important;
}

.video-react-control-bar > .chartContainer {
    z-index: 2;
    bottom: 150%;
    position: absolute;
    width: 60% !important;
    left: 20%;
    padding-left: 0;
    padding-right: 0;
}

.video-react-control-bar > .chartContainer > canvas {
    z-index: 2;
    bottom: 150%;
    position: absolute;
    width: 100% !important;
    padding-left: 0;
    padding-right: 0;
}

.video-react-control-bar > .bookmarkContainer {
    z-index: 2;
    bottom: calc(150% - 10px);
    position: absolute;
    height: 20px;
    padding-left: 0;
    padding-right: 0;
}

.App .video-react-control-bar > .timeSlider {
    z-index: 3;
    position: absolute;
    bottom: 100%;
    left: 20%;
    width: 60%;
    margin-left: 0;
    margin-right: 0;
}

.video-react .video-react-progress-control > .video-react-slider {
    margin: 0 0;
}

.fillButton {
    flex: auto;
}

.App .mainPlayer .subSingleMode {
    position: absolute;
    top: 15%;
    left: 75%;
    width: 25%;
    z-index: 999 !important;
}

.App .mainPlayer .subPlayer {
    width: 100%;
    height: 100%;
}

.App .mainPlayer .subMultiMode {
    padding-top: 0 !important;
    top: 0;
    position: absolute;
    width: 50% !important;
    height: 100% !important;
    z-index: 0;
    border: none;
}

.App .mainPlayer .mainSingleMode {
    left: 0 !important;
    width: 100% !important;
}

.App .mainPlayer .mainMultiMode {
    left: 50% !important;
    width: 50% !important;
}

.bookmarkButton {
    z-index: 3;
    position: absolute;
    bottom: 100%;
    padding: 0 0 !important;
    font-size: 15px !important;
}

